# ml_algos-from-scratch

./: .gitignore  .pre-commit-config.yaml  PLANS.md  README.md  pyproject.toml
in_numpy/: adam.py  adamw.py  bpe_tokenizer.py  causal_self_attn.py  decision_tree.py  dectree_sol.py  dense_layer.py  gauss_naive_bayes.py  gpt2.py  gru.py  logreg.py  lstm.py  masked_self_attn.py  mha.py  rnn.py  rope.py  sandbox.py  softreg.py  sparse_moe_top_k_routing.py
in_torch/: adam.py  dense_layer.py  ffwd.py  gpt2.py  gru.py  lstm.py  masked_self_attn.py  mhsa.py  sparse_moe_top_k_routing.py
